updated style, trying to fix button issue on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -92,7 +92,7 @@ button {
 	font-size: 1rem;
 	height: 100%;
 	min-width: 18ch;
-	width: fit-content;
+	max-width: 25ch;
 	padding: 0 1em;
 	background-color: rgba(0, 0, 0, 0.5);
 	color: white;
@@ -105,11 +105,11 @@ button {
 }
 
 .name-list button.delete {
-	width: fit-content;
 	background-color: rgb(0, 0, 0, 0.5);
 	display: block;
 	padding: 0;
 	height: 100%;
+	max-width: 3em;
 	border-radius: 0;
 	padding: 0.2em 0.5em;
 	position: absolute;
